--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div>
+		<div class="content">
 			<p>Welcome to Sophia's web page. You can contact me <a href="mailto:sophia.guti10@gmail.com"> here<a/>.</p>
 		</div>
 	</body>
