--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Sophia</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
+	<header>
+		<h1> I like to bake </h1>
 	<body>
 		<div class="content">
 			<p>Welcome to Sophia's web page. You can contact me <a href="mailto:sophia.guti10@gmail.com"> here<a/>.</p>
