--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<div class="content">
 			<p>Welcome to Sophia's web page. You can contact me <a href="mailto:sophia.guti10@gmail.com"> here<a/>.</p>
+				<img src="https://www.instagram.com/p/B66GyO8lSNY/">
 		</div>
 	</body>
 </html>
